--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,12 +20,50 @@
     <title>Frontend Mentor | Ping coming soon page</title>
   </head>
   <body>
+    <main role="main">
+      <img src="./images/logo.svg" alt="Ping logo" class="logo" />
+      <h1 class="main-heading">
+        We are launching <span class="bold">soon!</span>
+      </h1>
+      <p class="sub-heading">Subscribe and get notified</p>
+      <form action="" class="form">
+        <label for="email">
+          <input type="email" class="email" name="email" id="email" />
+        </label>
+        <button class="submit-btn" type="submit">Notify Me</button>
+      </form>
+      <img
+        src="./images/illustration-dashboard.png"
+        alt="an illustration of the Ping dashboard"
+        class="dashboard"
+      />
+    </main>
     <footer>
+      <div class="social-links">
+        <a href="" class="social-link"
+          ><img
+            src="./images/facebook-icon.png"
+            alt="facebook icon with a link to our page"
+            class="social-icon" /></a
+        ><a href="" class="social-link"
+          ><img
+            src="./images/twitter-icon.png"
+            alt="twitter icon with a link to our page"
+            class="social-icon" /></a
+        ><a href="" class="social-link"
+          ><img
+            src="./images/insta-icon.png"
+            alt="instagram icon with a link to our page"
+            class="social-icon"
+        /></a>
+      </div>
+      <p class="copyright">© Copyright Ping. All rights reserved.</p>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/davis-matt0" target="_blank">Matt D</a>.
       </p>
     </footer>
     <script src="./script.js"></script>
