add placeholder text to input field

--- a/index.html
+++ b/index.html
@@ -21,17 +21,27 @@
   </head>
   <body>
     <main role="main">
-      <img src="./images/logo.svg" alt="Ping logo" class="logo" />
-      <h1 class="main-heading">
-        We are launching <span class="bold">soon!</span>
-      </h1>
-      <p class="sub-heading">Subscribe and get notified</p>
-      <form action="" class="form">
-        <label for="email">
-          <input type="email" class="email" name="email" id="email" />
-        </label>
-        <button class="submit-btn" type="submit">Notify Me</button>
-      </form>
+      <section class="intro">
+        <img src="./images/logo.svg" alt="Ping logo" class="logo" />
+        <h1 class="main-heading">
+          <span class="light">We are launching</span> soon!
+        </h1>
+        <p class="sub-heading">Subscribe and get notified</p>
+      </section>
+      <section class="form-section">
+        <form action="" class="form">
+          <label for="email">
+            <input
+              type="email"
+              class="email"
+              name="email"
+              id="email"
+              placeholder="Your email address..."
+            />
+          </label>
+          <button class="submit-btn" type="submit">Notify Me</button>
+        </form>
+      </section>
       <img
         src="./images/illustration-dashboard.png"
         alt="an illustration of the Ping dashboard"
