add required attribute and invalid state to input field

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               name="email"
               id="email"
               placeholder="Your email address..."
+              required
             />
           </label>
           <button class="submit-btn" type="submit">Notify Me</button>
